force-app/main/default/objects/Case_Entitlement_Status__c/Case_Entitlement_Status__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>SSSW  - Used by CaseMilestoneUtil</description>
    <label>Case Entitlement Status</label>
</CustomObject>