force-app/main/default/objects/Case_Entitlement_Status__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>