force-app/main/default/objects/Case_Entitlement_Status__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <label>Facility</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>