force-app/main/default/objects/Case_Entitlement_Status__c/fields/Internal__c.field-meta.xml
<CustomField>
    <fullName>Internal__c</fullName>
    <label>Internal</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>